@startuml
abstract class mastermind.Mastermind{
	-Logic logic
	-View view
	#Mastermind()
	#{abstract}Logic createLogic()
	#void play()
}
mastermind.Mastermind <|-- mastermind.MastermindStandalone
mastermind.Mastermind --> mastermind.views.View
mastermind.Mastermind *-down-> mastermind.controllers.Logic

class mastermind.MastermindStandalone{
	+{static}void main(String[] args)
	#LogicImplementation createLogic()
}

@enduml